add vacancy text add summary block to splash page refactor offers

--- a/src/blocks/b-offer/b-offer.less
+++ b/src/blocks/b-offer/b-offer.less
@@ -2,28 +2,21 @@
 @import "mixins";
 
 .b-offer {
-	margin-top: 35px;
+	margin-top: 28px;
 	margin-bottom: 100px;
+}
+
+.b-offer__cover {
+	position: relative;
+	margin-bottom: 88px;
 }
 
 .b-offer__image {
 	border-radius: 13px;
 }
 
-.b-offer__properties {
-	text-align: center;
-	margin: 55px/2 0;
-}
-
-.b-offer__property {
-	display: inline-block;
-
-	font-size: 30px;
-	margin: 0 25px;
-}
-
 .b-offer__rub {
-	font-size: 75%;
+	font-family: 'PT Sans Narrow', sans-serif;
 }
 
 .b-offer__text {
