--- a/src/blocks/b-offers-filter/b-offers-filter.less
+++ b/src/blocks/b-offers-filter/b-offers-filter.less
@@ -7,7 +7,7 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items: flex-start;
-	margin: 0 -10px;
+	margin: 0 -10px 40px;
 }
 
 .b-offers-filter__block {
@@ -31,8 +31,10 @@
 }
 
 .b-offers-filter__title {
-	color: rgba(37, 37, 37, .1);
-	font-size: 14px;
+	color: rgba(37, 37, 37, .3);
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: .1em;
 	text-align: center;
 	margin: 10px 0;
 }
