--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -51,23 +51,51 @@
 .b-offers__content {
 	position: relative;
 	margin-bottom: 13px;
+	padding-left: 11px;
+	padding-right: 11px;
 }
 
 .b-offers__label {
 	position: absolute;
-	top: 10px;
-	left: 0;
 
-	background: #9c1cae;
-	padding: 0 8px;
+	padding: 0 10px;
 
-	font-size: 14px;
-	line-height: 22px;
+	font-size: 10px;
+	letter-spacing: .2em;
+	line-height: 25px;
 	color: #fff;
+	text-transform: uppercase;
+
+	border-radius: 12px;
+
+	b, strong {
+		font-size: 13px;
+		letter-spacing: 0;
+	}
+}
+
+.b-offers__label_date {
+	bottom: 10px;
+	right: 0;
+
+	background: #252525;
+}
+
+.b-offers__label_coupons {
+	bottom: 42px;
+	right: 0;
+
+	background: #e74c3c;
+}
+
+.b-offers__label_bonuses {
+	left: 0;
+	top: 10px;
+
+	background: #acc000;
 }
 
 .b-offers__image {
-
 }
 
 .b-offers__text {
