--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -54,7 +54,7 @@
 	color: #868686;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
-	margin-bottom: 20px;
+	margin: 0 10px 20px;
 	border-radius: 4px;
 
 	&:hover, &:active, &:focus {
