--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -7,7 +7,7 @@ head
     meta(name="description", content="")
 
     block styles
-        //link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i', type='text/css')
+        link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow', type='text/css')
         link(rel='stylesheet', href='assets/fonts/stylesheet.css')
         link(rel='stylesheet', href='assets/css/bootstrap.min.css')
         link(rel='stylesheet', href='assets/vendor/slick-carousel/slick/slick.css')
