--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -17,6 +17,9 @@ block content
                 a.b-summary__item.b-summary__item_3(href='blog.html')
                     .b-summary__number.odometer(data-number="15") 15
                     .b-summary__text статей в нашем#[br]справочнике
+                a.b-summary__item.b-summary__item_4(href='offers.html')
+                    .b-summary__number.odometer(data-number="40000") 40000
+                    .b-summary__text рублей#[br]бонусов
         .b-portfolio
             .b-portfolio__list
                 - for (var i=0; i<6;++i)
