--- a/src/templates/offers.jade
+++ b/src/templates/offers.jade
@@ -3,6 +3,9 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .container
+            .text-center
+                a.b-page__back.js-fancybox-video(href='http://www.youtube.com/watch?v=opj24KnzrWo') КАК ЭТО РАБОТАЕТ?
+                a.b-page__back.js-fancybox-inline(href='#vacancy_form') СТАТЬ ПАРТНЕРОМ
             h1.b-page__title Все акции
 
             p.b-page__lead Бонусы от партнеров для наших клиентов
@@ -32,86 +35,17 @@ block content
 
                         .b-offers-filter__title jpg-баннеры
             .b-offers__list
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
-                a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
-                    p.b-offers__title 3 месяца бесплатного использования Jivosite
-                    .b-offers__content
-                        .b-offers__label Действует до 10.06.2016
-                        img.img-responsive.b-offers__image(src='assets/img/tmp/akcii.png')
-                    .b-offers__text
-                        p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
-                        p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
+                each i in [1,2,3,4,5,6,7,8,9,10]
+                    a.b-offers__item.emerge(href='offer.html', data-effect="relax", data-origin="top", data-expose="true")
+                        p.b-offers__title 3 месяца бесплатного использования Jivosite
+                        .b-offers__content
+                            img.img-responsive.b-offers__image(src='http://placehold.it/500x400')
+                            .b-offers__label.b-offers__label_date Действует до #[b 10.06.2016]
+                            .b-offers__label.b-offers__label_coupons #[b 15] ПРОМОКОДОВ
+                            .b-offers__label.b-offers__label_bonuses БОНУСОВ #[b 2000]#[span.b-offer__rub ₽]
+                        .b-offers__text
+                            p JivoSite позволяет Вам общаться в чате с посетителями Вашего сайта.
+                            p Это увеличивает эффективность сайта, повышая продажи без дополнительных вложений в рекламу.
             script.
                 $('.b-offers__item').each(function(){
                     $(this).data('hold', Math.floor(Math.random() * 450) + 50);
@@ -127,3 +61,44 @@ block content
                 .form-group
                     input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
                 button.btn.btn-lg.btn-success.b-subscribe__button(type="submit") Подписаться
+
+        .hidden
+            .b-modal-form#vacancy_form
+                p.b-modal-form__header Стать партнёром
+
+                .b-form.b-modal-form__form
+                    form.b-form__form(action="")
+                        .form-group
+                            label Ссылка на сайт компании
+                            input.form-control(type="text")
+                        .form-group
+                            label Как вас зовут
+                            input.form-control(type="text")
+                        .form-group
+                            label Email для связи
+                            input.form-control(type="email")
+                        .form-group
+                            label Сообщение
+                            textarea.form-control.resizable-y(rows="5")
+                        .form-group
+                            label Файлы
+                            p.help-block Презентации, коммерческие предложения, маркетинг-кит
+                            .b-form-files
+                                .b-form-files__item
+                                    .b-form-files__name resum.doc
+                                    .b-form-files__size 6.12 мб
+                                    .b-form-files__delete
+                                .b-form-files__item
+                                    .b-form-files__name resum.doc
+                                    .b-form-files__size 6.12 мб
+                                    .b-form-files__delete
+                                .b-form-files__item
+                                    .b-form-files__name resume_my.doc
+                                    .b-form-files__size 6.12 мб
+                                    .b-form-files__delete
+
+                            .b-form-upload.b-form__upload
+                                input(type="file", multiple="multiple", name="VacancyResume[files][]", id="VacancyResume_files_0", data-id="VacancyResume_files")
+                                span.b-form-upload__label Выберите файлы или перетащите их в эту форму
+
+                        input.btn.btn-success.btn-lg.b-form__button(type="submit", value="Отправить")
