--- a/src/templates/vacancies.jade
+++ b/src/templates/vacancies.jade
@@ -7,29 +7,29 @@ block content
 
             .b-vacancies-features
                 .b-vacancies-features__item
-                    img.img-responsive.b-vacancies-features__image(src='http://placehold.it/200x200')
+                    img.img-responsive.b-vacancies-features__image(src='assets/img/vacancy/1.png')
 
-                    p.b-vacancies-features__title Позаголовок 1
+                    p.b-vacancies-features__title Дружная команда
 
-                    p.b-vacancies-features__text Описание сути преимущества работы у нас в студии 1
+                    p.b-vacancies-features__text Общаемся и работаем с улыбкой. Поддерживаем друг друга в сложных ситуациях.
                 .b-vacancies-features__item
-                    img.img-responsive.b-vacancies-features__image(src='http://placehold.it/200x200')
+                    img.img-responsive.b-vacancies-features__image(src='assets/img/vacancy/2.png')
 
-                    p.b-vacancies-features__title Позаголовок 2
+                    p.b-vacancies-features__title Достойное вознаграждение
 
-                    p.b-vacancies-features__text Описание сути преимущества работы у нас в студии 1
+                    p.b-vacancies-features__text Зарабатываем столько, сколько приносим пользы. Нет потолка зарплаты.
                 .b-vacancies-features__item
-                    img.img-responsive.b-vacancies-features__image(src='http://placehold.it/200x200')
+                    img.img-responsive.b-vacancies-features__image(src='assets/img/vacancy/3.png')
 
-                    p.b-vacancies-features__title Позаголовок 3
+                    p.b-vacancies-features__title Интересные задачи
 
-                    p.b-vacancies-features__text Описание сути преимущества работы у нас в студии 1
+                    p.b-vacancies-features__text Делаем то, что нравится. То, чем можно гордиться.
                 .b-vacancies-features__item
-                    img.img-responsive.b-vacancies-features__image(src='http://placehold.it/200x200')
+                    img.img-responsive.b-vacancies-features__image(src='assets/img/vacancy/4.png')
 
-                    p.b-vacancies-features__title Позаголовок 4
+                    p.b-vacancies-features__title Обучение и развитие
 
-                    p.b-vacancies-features__text Описание сути преимущества работы у нас в студии 1
+                    p.b-vacancies-features__text Учимся новому, делимся опытом между собой.
             .b-slider
                 .b-slider__item
                     img.img-responsive(src='http://placehold.it/1000x350')
