--- a/src/blocks/b-vacancies-features/b-vacancies-features.less
+++ b/src/blocks/b-vacancies-features/b-vacancies-features.less
@@ -16,6 +16,9 @@
 
 .b-vacancies-features__image {
 	margin-bottom: 20px;
+	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .b-vacancies-features__title {
