add fancybox gallery fitToView add change title on portfolio fancybox fix offer list styles

--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -82,10 +82,14 @@
 }
 
 .b-offers__label_coupons {
-	bottom: 42px;
+	bottom: 10px;
 	right: 0;
 
 	background: #e74c3c;
+}
+
+.b-offers__label_date + .b-offers__label_coupons {
+	bottom: 42px;
 }
 
 .b-offers__label_bonuses {
