--- a/src/less/common.less
+++ b/src/less/common.less
@@ -302,6 +302,11 @@ body {
 }
 
 .fancybox-type-image {
+	max-width: ~"calc(100vw - 220px)";
+
+	.fancybox-inner {
+		max-width: ~"calc(100vw - 220px)";
+	}
 	.fancybox-nav {
 		span {
 			top: 50%;
