refactor contacts page

--- a/src/blocks/b-contact-links/b-contact-links.less
+++ b/src/blocks/b-contact-links/b-contact-links.less
@@ -23,37 +23,49 @@
 }
 
 .b-contact-links__item {
-	background: 0 0 no-repeat url("../../assets/img/contact-links.png");
-	width: 90px;
+	//background: 0 0 no-repeat url("../../assets/img/contact-links.png");
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: 89px;
+
+	width: 89px;
 	height: 89px;
 	display: inline-block;
 	margin: 0 5px;
+	opacity: .9;
 
 	&:hover, &:active, &:focus {
-		background-position-y: -89px;
+		//background-position-y: -89px;
+		opacity: 1;
 	}
 }
 
 .b-contact-links__item_fb {
-	background-position-x: 0;
+	background-image: url("../../assets/img/contact-links/Facebook.svg");
+	//background-position-x: 0;
 }
 
 .b-contact-links__item_vk {
-	background-position-x: -90px;
+	background-image: url("../../assets/img/contact-links/Vk.svg");
+	//background-position-x: -90px;
 }
 
 .b-contact-links__item_tw {
-	background-position-x: -90px * 2;
+	background-image: url("../../assets/img/contact-links/Twitter.svg");
+	//background-position-x: -90px * 2;
 }
 
 .b-contact-links__item_instagram {
-	background-position-x: -90px * 3;
+	background-image: url("../../assets/img/contact-links/Instagram.svg");
+	//background-position-x: -90px * 3;
 }
 
 .b-contact-links__item_youtube {
-	background-position-x: -90px * 4;
+	background-image: url("../../assets/img/contact-links/YouTube.svg");
+	//background-position-x: -90px * 4;
 }
 
 .b-contact-links__item_spark {
-	background-position-x: -90px * 5;
+	background-image: url("../../assets/img/contact-links/Spark.svg");
+	//background-position-x: -90px * 5;
 }
