--- a/src/blocks/b-form/b-form.less
+++ b/src/blocks/b-form/b-form.less
@@ -56,7 +56,7 @@
 .b-form__button {
 	font-size: 30px;
 	font-weight: bold;
-	padding: 17px 40px;
+	padding: 19px 70px 25px !important;
 	margin-top: 10px;
 }
 
