--- a/src/templates/contacts.jade
+++ b/src/templates/contacts.jade
@@ -8,18 +8,18 @@ block content
             .b-contacts
                 .row
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_phone +7 (351) 277-91-60
+                        .b-contacts__item.b-contacts__item_phone +7 (812) 603-70-97
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_skype: a.b-contacts__link(href='#') tolkunovdb
+                        .b-contacts__item.b-contacts__item_skype: a.b-contacts__link(href='skype:tolkunovdb?chat') tolkunovdb
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_address Блюхера 69, офис 507
+                        .b-contacts__item.b-contacts__item_vk: a.b-contacts__link(href='https://vk.com/im?media=&sel=-68302756', target='_blank') Messenger VK
                 .row
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_mail: a.b-contacts__link(href='#') order@tolkunov.com
+                        .b-contacts__item.b-contacts__item_mail: a.b-contacts__link(href='mailto:order@tolkunov.com') order@tolkunov.com
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_telegram: a.b-contacts__link(href='#') tolkunovdb
+                        .b-contacts__item.b-contacts__item_telegram: a.b-contacts__link(href='http://telegram.me/tolkunovdb', target='_blank') tolkunovdb
                     .col-xs-4
-                        .b-contacts__item.b-contacts__item_time 10:00-19:00, пн-пт
+                        .b-contacts__item.b-contacts__item_fb: a.b-contacts__link(href='https://www.facebook.com/messages/t/tolkunov', target='_blank') Messenger Facebook
             .b-map
                 center
                     a.dg-widget-link(href="http://2gis.ru/chelyabinsk/firm/70000001022907880/center/61.366946697235115,55.129851325891494/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap") Посмотреть на карте Челябинска
@@ -58,6 +58,4 @@ block content
                     .form-group
                         textarea.form-control(rows="10")
 
-                    input.btn.btn-primary.btn-lg.b-form__button(type="submit", value="Отправить")
-                    br
-                    a.b-form__link(href='#') Соглашение о конфиденциальности
+                    input.btn.btn-info.btn-lg.b-form__button(type="submit", value="Отправить")
