--- a/src/blocks/b-footer/b-footer.less
+++ b/src/blocks/b-footer/b-footer.less
@@ -10,12 +10,14 @@
 
 .b-footer__logo {
 	display: inline-block;
-	background: 0 0 no-repeat url("../../assets/img/footer-logo.png");
-	width: image-width("../../assets/img/footer-logo.png");
-	height: image-height("../../assets/img/footer-logo.png")/2;
+	background: 0 0 no-repeat url("../../assets/img/logo-white.svg");
+	width: 141px;
+	height: 31px;
+	//width: image-width("../../assets/img/footer-logo.png");
+	//height: image-height("../../assets/img/footer-logo.png")/2;
 
 	&:hover, &:active, &:focus {
-		background-position: left bottom;
+		background-image: url("../../assets/img/logo-blue.svg");
 	}
 }
 
