--- a/src/blocks/b-header/b-header.less
+++ b/src/blocks/b-header/b-header.less
@@ -10,11 +10,11 @@
 	float: left;
 	width: 240px;
 	height: 53px;
-	background: left top no-repeat url("../../assets/img/logo.png");
+	background: left top no-repeat url("../../assets/img/logo-black.svg");
 	margin-top: 54px;
 
 	&:hover, &:active, &:focus {
-		background-position: left bottom;
+		background-image: url("../../assets/img/logo-blue.svg");
 	}
 }
 
