--- a/src/blocks/b-social-links/b-social-links.less
+++ b/src/blocks/b-social-links/b-social-links.less
@@ -18,46 +18,83 @@
 
 .b-social-links__link {
 	display: inline-block;
-	background-position: left top;
+	background-position: center center;
 	background-repeat: no-repeat;
 
-	&:hover, &:active, &:focus {
-		background-position: left bottom;
-	}
+	//&:hover, &:active, &:focus {
+	//	background-position: left bottom;
+	//}
 }
 
 .b-social-links__link_vk {
-	background-image: url("../../assets/img/social-links/vk.png");
-	width: image-width("../../assets/img/social-links/vk.png");
-	height: image-height("../../assets/img/social-links/vk.png")/2;
+	background-image: url("../../assets/img/social-links/Vk.svg");
+	width: 35px;
+	height: 20px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/Vk.svg");
+	}
+	//width: image-width("../../assets/img/social-links/vk.png");
+	//height: image-height("../../assets/img/social-links/vk.png")/2;
 }
 
 .b-social-links__link_fb {
-	background-image: url("../../assets/img/social-links/fb.png");
-	width: image-width("../../assets/img/social-links/fb.png");
-	height: image-height("../../assets/img/social-links/fb.png")/2;
+	background-image: url("../../assets/img/social-links/Facebook.svg");
+	width: 16px;
+	height: 28px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/Facebook.svg");
+	}
+
+	//width: image-width("../../assets/img/social-links/fb.png");
+	//height: image-height("../../assets/img/social-links/fb.png")/2;
 }
 
 .b-social-links__link_tw {
-	background-image: url("../../assets/img/social-links/tw.png");
-	width: image-width("../../assets/img/social-links/tw.png");
-	height: image-height("../../assets/img/social-links/tw.png")/2;
+	background-image: url("../../assets/img/social-links/Twitter.svg");
+	width: 30px;
+	height: 24px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/Twitter.svg");
+	}
+	//width: image-width("../../assets/img/social-links/tw.png");
+	//height: image-height("../../assets/img/social-links/tw.png")/2;
 }
 
 .b-social-links__link_instagram {
-	background-image: url("../../assets/img/social-links/instagram.png");
-	width: image-width("../../assets/img/social-links/instagram.png");
-	height: image-height("../../assets/img/social-links/instagram.png")/2;
+	background-image: url("../../assets/img/social-links/Instagram.svg");
+	width: 30px;
+	height: 30px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/Instagram.svg");
+	}
+	//width: image-width("../../assets/img/social-links/instagram.png");
+	//height: image-height("../../assets/img/social-links/instagram.png")/2;
 }
 
 .b-social-links__link_youtube {
-	background-image: url("../../assets/img/social-links/youtube.png");
-	width: image-width("../../assets/img/social-links/youtube.png");
-	height: image-height("../../assets/img/social-links/youtube.png")/2;
+	background-image: url("../../assets/img/social-links/YouTube.svg");
+	width: 27px;
+	height: 30px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/YouTube.svg");
+	}
+	//width: image-width("../../assets/img/social-links/youtube.png");
+	//height: image-height("../../assets/img/social-links/youtube.png")/2;
 }
 
 .b-social-links__link_spark {
-	background-image: url("../../assets/img/social-links/spark.png");
-	width: image-width("../../assets/img/social-links/spark.png");
-	height: image-height("../../assets/img/social-links/spark.png")/2;
+	background-image: url("../../assets/img/social-links/Spark.svg");
+	width: 31px;
+	height: 30px;
+
+	&:hover, &:active, &:focus {
+		background-image: url("../../assets/img/social-links/hover/Spark.svg");
+	}
+	//width: image-width("../../assets/img/social-links/spark.png");
+	//height: image-height("../../assets/img/social-links/spark.png")/2;
 }
