--- a/src/less/common.less
+++ b/src/less/common.less
@@ -241,7 +241,7 @@ body {
 	width: 32px;
 	height: 32px;
 
-	background: left top no-repeat url("../../assets/img/modal-close.png");
+	background: left top no-repeat url("../../assets/img/close.svg");
 	opacity: .3;
 	transition: all .1s ease-out;
 
