--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -132,21 +132,21 @@ block content
                 .b-why-us__list
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/1.png')
+                            img(src='assets/img/why-us/01-icon-deshevle.svg', width=154, height=155)
                         p.b-why-us__title Дешевле агентства, лучше фрилансера
 
                         .b-why-us__text
                             p Отвечаем репутацией за качество готового продукта, поэтому не&nbsp;передаём заказы фрилансерам.
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/2.png')
+                            img(src='assets/img/why-us/02-icon-opyt.svg', width=158, height=160)
                         p.b-why-us__title Опыт в почти 100 тематиках
 
                         .b-why-us__text
                             p Работали с клиентами из России, Украины, США, Канады, Польши. Делали баннеры для заводов, салонов красоты, салонов, брокеров, ресторанов, магазинов и многих других.
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/3.png')
+                            img(src='assets/img/why-us/03-icon-resultat.svg', width=159, height=154)
                         p.b-why-us__title Доведение проекта до&nbsp;результата
 
                         .b-why-us__text
@@ -154,21 +154,21 @@ block content
                 .b-why-us__list
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/4.png')
+                            img(src='assets/img/why-us/04-icon-ponocsh.svg', width=156, height=157)
                         p.b-why-us__title Помощь в размещении баннера на сайте
 
                         .b-why-us__text
                             p Бесплатно консультируем по смежным вопросам: как разместить флеш-баннер, как вставить гиф-заглушку, где рекламироваться.
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/5.png')
+                            img(src='assets/img/why-us/05-icon-oplata.svg', width=138, height=139)
                         p.b-why-us__title Разные способы оплаты
 
                         .b-why-us__text
                             p Принимаем оплату на карту Сбербанка, на счёт Альфа-банка, QIWI, WebMoney, Яндекс.Деньги, расчетный счет ИП.
                     .b-why-us__item
                         .b-why-us__image
-                            img(src='assets/img/why-us/6.png')
+                            img(src='assets/img/why-us/06-icon-srochno.svg', width=158, height=146)
                         p.b-why-us__title Работа со срочными заказами
 
                         .b-why-us__text
