--- a/src/templates/clients.jade
+++ b/src/templates/clients.jade
@@ -12,38 +12,31 @@ block content
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Классика
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_1_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_1_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_1_on.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title MAXPROMO
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Жулькон
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/empty-logo.png')
-                                img.b-clients__image_hover(src='assets/img/empty-logo.png')
+                                img.b-clients__image.b-clients__image_empty(src='assets/img/empty-logo.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title MAXPROMO
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Московская консерватория
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Практика комфорта
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                         a.b-clients__item(href='client.html')
                             span.b-clients__title Евгений Лановой
                             .b-clients__content
-                                img.b-clients__image_default(src='assets/img/tmp/client_2_off.png')
-                                img.b-clients__image_hover(src='assets/img/tmp/client_2_on.png')
+                                img.b-clients__image(src='assets/img/tmp/client_2_on.png')
                 .g-loader.g-loader_theme_dark
                     .g-loader__content
                         a.g-loader__button(href='#') #[i.g-loader__button-icon]#[span.g-loader__button-text Загрузить ещё]
